--- a/src/Components/CSS/Navbar.css
+++ b/src/Components/CSS/Navbar.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Yeseva+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yeseva+One&display=swap');
 
 .nav {
-  background-color: black;
-  font-family: "Yeseva One", serif;
+  background-color: #061023;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
   display: flex;
@@ -23,8 +25,9 @@
 }
 
 .nav > .nav-header > .nav-title {
+  text-decoration: none;
   display: inline-block;
-  font-size: 2em;
+  font-size: 1.4em;
   color: #fff;
   padding: 10px 10px 10px 10px;
 }
