--- a/src/CSS/logIn.css
+++ b/src/CSS/logIn.css
@@ -6,6 +6,7 @@
   align-items: start;
   width: 100vw;
   height: 90vh;
+  color:#061023;
 }
 
 .Auth-form {
@@ -43,7 +44,7 @@ label {
 
 .link-primary{
   color: blue;
-  margin-left: 1rem;
+  margin-left: 5px;
   text-decoration: underline;
   cursor: pointer;
 }
@@ -56,16 +57,12 @@ label {
   width: 7rem;
 }
 
-.form-control{
-  width: 11rem;
-}
-
 .inputf {
   width: 11rem;
   background: 0;
   border: 0;
   outline: none;
-  font-size: 1em;
+  font-size: .7em;
   transition: padding 0.3s 0.2s ease;
 }
 .inputf:focus {
@@ -93,4 +90,22 @@ label {
   transform: scalex(0);
   transition: transform 0.3s ease;
   background: #1abc9c;
+}
+.sub-btn-cont{
+  display: flex;
+  justify-content: center;
+}
+
+.btn-sub{
+  margin-top: 1rem;
+}
+
+.forgot-pass-cont{
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.forgot-pass-cont a{
+  margin-left: 10px;
 }
