--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,14 @@
   margin: 0;
   padding: 0;
 }
+
+.btn{
+  width: 5rem;
+  padding: .5rem 1rem;
+  background: none;
+  border: none;
+  background-color: #061023;
+  color: white;
+  border-radius: 12px;
+  text-align: center;
+}
